unpackaged/main/default/objects/n2de__cls_Territory__c/n2de__cls_Territory__c.object-meta.xml
<CustomObject>
    <label>Classifier territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>