unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__Active_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Active_name__c</fullName>
    <label>Active name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>