unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__cls_Territory_map__c.field-meta.xml
<CustomField>
    <fullName>n2de__cls_Territory_map__c</fullName>
    <label>Territory map</label>
    <referenceTo>n2de__cls_Territory_map__c</referenceTo>
    <relationshipLabel>Territories</relationshipLabel>
    <relationshipName>Territories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>