unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__Color__c.field-meta.xml
<CustomField>
    <fullName>n2de__Color__c</fullName>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>