unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__Default_zoom__c.field-meta.xml
<CustomField>
    <fullName>n2de__Default_zoom__c</fullName>
    <label>Default zoom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>