unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__Execution_order__c.field-meta.xml
<CustomField>
    <fullName>n2de__Execution_order__c</fullName>
    <label>Execution order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>