unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__Items_json__c.field-meta.xml
<CustomField>
    <fullName>n2de__Items_json__c</fullName>
    <label>Items json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>