unpackaged/main/default/objects/n2de__cls_Territory__c/fields/n2de__Number_of_items__c.field-meta.xml
<CustomField>
    <fullName>n2de__Number_of_items__c</fullName>
    <label>Number of items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>